--- a/Exos/Exo01/680-985362483/exercice/galerie.html
+++ b/Exos/Exo01/680-985362483/exercice/galerie.html
@@ -93,6 +93,12 @@ Implémentez le JavaScript de cette galerie d'images :
 				// On affiche le titre :
 				document.querySelector('.titre').textContent = this.alt;
 
+				// On met la bordure de la vignette rouge en blanc pour la "désélectionner" :
+				document.querySelector('.selected').classList.remove('selected');  // on retire la classe "selected" à la vignette qui possède la bordure rouge pour la mettre en blanc
+
+				// On ajoute la bordure rouge  à la vignette cliquée avec la classe "selected" :
+				this.classList.add('selected');  // on ajoute la classe "selected" à la vignette sur laquelle on a cliqué (= this)
+
 			});
 		}
 
