--- a/Eval/02-correction/index.html
+++ b/Eval/02-correction/index.html
@@ -11,6 +11,12 @@
     <link href="https://fonts.googleapis.com/css?family=Merienda:400,700" rel="stylesheet"> 
     <!-- Les styles -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- js bootstrap le tout en CDN -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
+
+    <!-- mes script en js ou en jQuery -->
     <script src="js/script.js"></script>
 </head>
 <body>
@@ -36,7 +42,7 @@
                     <div class="form-group">
                         <label for="name">Choix du chat</label>
                         <select class=" form-control" name="name" id="name">
-                            <option value="" disabled>Selectionnez</option>
+                            <option value="">Selectionnez</option>
                             <option value="Sushi">Sushi</option>
                             <option value="Maki">Maki</option>
                             <option value="Sashimi">Sashimi</option>
@@ -148,12 +154,6 @@
 
     
 
-    <!-- js bootstrap le tout en CDN -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
-
-    <!-- mes script en js ou en jQuery -->
-    <script src="js/script.js"></script>
+    
 </body>
 </html>
